grammar
<program>::=<statement>
<statement>::="var" <type-assignment>
              "if" <paren-expr> <statement> |
              "if" <paren-expr> <statement> "else" <statement>
              "while" <paren-expr> <statement> |
              "do" <statement> while <paren-expr> |
              "{" <statement> "}" |
              <expr> ";" |
              ";"
              // place for "for" and "switch" and "ternary"
<expression>::=<test4> |
         <assignment>
<assignment>::= <var> "=" <expression>
                <var> = "{""}"|
                <var> "=" "{" <object-fields> "," <object-field> "}"
                <var> "+=" <expression> |
                <var> "-=" <expression> |
                <var> "*=" <expression> |
                <var> "/=" <expression> |
                <var> "%=" <expression> |
                <var> "&=" <expression> |
                <var> "^=" <expression> |
                <var> "|=" <expression>
<object-field> ::= "[" name: <test4> "]"
<object-fields> ::= <object-field> |
                    <object-fields> "," <object-field>
<type-assignment> ::= <type-assignment> |
                      <type-assignment> "," <assignment>
<test4>::= <temp5>
           <expr> "?" <test5> ":" <test5> |
<temp5>::= <temp6> |
           <temp5> "||" <temp6>
<temp6>::= <temp7> |
           <temp6> "&&" <temp7>
<temp7>::= <temp8> |
           <temp7> "|" <temp8>
<temp8>::= <temp9> |
           <temp8> "^" <temp9>
<temp9>::= <temp10> |
           <temp9> "&" <temp10>
<temp10>::=<temp11> |
           <temp10> "==" <temp11> |
           <temp10> "!=" <temp11> |
           <temp10> "===" <temp11> |
           <temp10> "!==" <temp11>
<temp11>::=<temp12> |
           <temp11> "<" <temp12> |
           <temp11> "<=" <temp12> |
           <temp11> ">" <temp12> |
           <temp11> "<" <temp12>
<temp12>::=<temp13> |
           <temp12> "<<" <temp13> |
           <temp12> ">>" <temp13> |
           <temp12> ">>>" <temp13>
<temp13>::=<temp14> |
           <temp13> "+" <temp14> |
           <temp13> "-" <temp14>
<temp14>::=<temp16> |
           <temp14> "*" <temp16> |
           <temp14> "/" <temp16> |
           <temp14> "%" <temp16>
<temp16>::=<temp17> |
           "!" <temp16> |
           "~" <temp16> |
           "unary (+/-)" <temp16> |
           "++" <var> |
           "--" <var>
<temp17>::=<term>
           <var> "++" |
           <var> "--"
<term>::=<var> |
         <const> |
         <paren-expr> |
<var> ::= ..variable-name..|
          ..variable-name "[" <expr> "]"
<constant> ::= ..some constant..
<paren-expr>::="("<expr>")"
